--- a/my-turborepo/apps/ws-backend/package.json
+++ b/my-turborepo/apps/ws-backend/package.json
@@ -9,8 +9,14 @@
   },
   "dependencies": {
     "@repo/typescript-config": "workspace:*",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/ws": "^8.18.1",
+    "jsonwebtoken": "^9.0.3",
     "ws": "^8.18.3"
+  },
+   "devDependencies": {
+    "@repo/typescript-config" : "workspace:*",
+    "@repo/backend-common" : "workspace:*"
   },
   "keywords": [],
   "author": "",
