--- a/my-turborepo/apps/http-backend/package.json
+++ b/my-turborepo/apps/http-backend/package.json
@@ -8,16 +8,18 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "@repo/typescript-config": "workspace:*",
+    "@repo/typescript-config": "workspace:^",
+    "@types/bcryptjs": "^3.0.0",
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
+    "bcryptjs": "^3.0.3",
+    "cors": "^2.8.5",
     "express": "^5.2.1"
-    
-
   },
   "devDependencies": {
-    "@repo/typescript-config" : "workspace:*",
-    "@repo/backend-common" : "workspace:*"
+    "@repo/backend-common": "workspace:*",
+    "@repo/db": "workspace:*",
+    "@repo/typescript-config": "workspace:*"
   },
   "keywords": [],
   "author": "",
