added zod as well

--- a/my-turborepo/apps/http-backend/package.json
+++ b/my-turborepo/apps/http-backend/package.json
@@ -19,7 +19,9 @@
   "devDependencies": {
     "@repo/backend-common": "workspace:*",
     "@repo/db": "workspace:*",
-    "@repo/typescript-config": "workspace:*"
+    "@repo/typescript-config": "workspace:*",
+        "@repo/common": "workspace:*"
+
   },
   "keywords": [],
   "author": "",
