--- a/my-turborepo/apps/ws-backend/package.json
+++ b/my-turborepo/apps/ws-backend/package.json
@@ -17,7 +17,9 @@
    "devDependencies": {
     "@repo/typescript-config" : "workspace:*",
     "@repo/backend-common" : "workspace:*",
-     "@repo/db" :"workspace:*"
+     "@repo/db" :"workspace:*",
+             "@repo/common": "workspace:*"
+
   },
   "keywords": [],
   "author": "",
