--- a/my-turborepo/apps/http-backend/package.json
+++ b/my-turborepo/apps/http-backend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@repo/typescript-config": "workspace:^",
     "@types/bcryptjs": "^3.0.0",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
     "bcryptjs": "^3.0.3",
@@ -18,10 +19,9 @@
   },
   "devDependencies": {
     "@repo/backend-common": "workspace:*",
+    "@repo/common": "workspace:*",
     "@repo/db": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
-        "@repo/common": "workspace:*"
-
+    "@repo/typescript-config": "workspace:*"
   },
   "keywords": [],
   "author": "",
