--- a/my-turborepo/apps/http-backend/package.json
+++ b/my-turborepo/apps/http-backend/package.json
@@ -19,7 +19,8 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3"
   },
   "devDependencies": {
     "@repo/backend-common": "workspace:*",
