--- a/my-turborepo/packages/db/package.json
+++ b/my-turborepo/packages/db/package.json
@@ -13,11 +13,15 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@prisma/client": "^7.2.0",
+    "@prisma/client": "^5.22.0",
     "@repo/typescript-config": "workspace:*",
     "@types/node": "^25.0.3",
-    "prisma": "^7.2.0",
+    "prisma": "^5.22.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
+  },
+  "dependencies": {
+    "@prisma/adapter-pg": "^7.2.0",
+    "pg": "^8.16.3"
   }
 }
